# the-agnostic-orchestrator

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  openapi.yaml  pyproject.toml  tao.toml
.claude/rules/: cli.md  models.md  persistence.md  subprocess.md  testing.md
.github/: copilot-instructions.md
docs/: api-reference.md  config-reference.md  errors.md  getting-started.md  http-api.md  step-protocol.md  task-lifecycle.md  workspace-and-hooks.md
e2e/: 01-one-shot.json  02-research-linear.json  03-dev-with-validation.json  04-one-shot-with-validation.json  05-research-multi-doc.json  06-dev-incremental.json  README.md
presets/: README.md  dev.json  refactor.json
src/: __init__.py  __main__.py  api.py  cli.py  flow.py  fmt.py  gates.py  models.py  policy.py  queue.py  server.py  step_runner.py  store.py
src/providers/: __init__.py  _pty_runner.py  claude.py  claude_interactive.py  copilot.py  llm_service.py  pool.py
src/static/: monitor.html
tests/: conftest.py  factories.py  test_api.py  test_claude_interactive.py  test_cli.py  test_flow.py  test_fmt.py  test_gates.py  test_llm_service.py  test_models.py  test_policy.py  test_providers.py  test_pty_runner.py  test_queue.py  test_server.py  test_step_runner.py  test_store.py
