[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tao"
version = "1.0.0"
description = "TAO — The Agnostic Orchestrator. A generic, language-agnostic engine that orchestrates LLM work."
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "pytest-timeout>=2.0",
]

[project.scripts]
tao = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
src = ["static/*.html"]
